# Boson

./: .clang-format  .gitignore  CMakeLists.txt  README.md  install.ps1  install.sh  release.sh
.github/workflows/: release.yml
cli/: go.mod  go.sum  main.go
cli/cmd/: build.go  debug.go  generate.go  install.go  new.go  root.go  run.go  update.go  version.go
cli/pkg/bosonfetch/: bosonfetch.go
cli/pkg/project/: creator.go
cli/pkg/templates/: templates.go
cli/pkg/utils/: filewatcher.go  project.go
cli/templates/controller/: controller.hpp.tmpl
cli/templates/middleware/: middleware.hpp.tmpl
cli/templates/model/: model.hpp.tmpl
cli/templates/project/api/: api_controller.hpp  user.hpp  user_service.hpp
cli/templates/project/common/: .gitignore  CMakeLists.txt  README.md  hello_controller.hpp  main.cpp
cli/templates/project/full/: app.js  index.html  layout.hpp  main.cpp  styles.css  view_controller.hpp
cli/templates/project/full/controllers/: api_controller.hpp  view_controller.hpp
cli/templates/project/full/middleware/: auth_middleware.hpp  logger_middleware.hpp
cli/templates/project/full/models/: user.hpp
cli/templates/project/full/services/: user_service.hpp
cli/templates/project/full/views/: layout.hpp
cli/templates/project/websocket/: websocket.js  websocket_handler.hpp  websocket_html.html
cli/templates/router/: router.hpp.tmpl
cli/templates/service/: service.hpp.tmpl
cmake/: BosonConfig.cmake.in
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/docs/: intro.md
docs/docs/core-concepts/: middleware.md  request-response.md  routing.md  server.md
docs/docs/getting-started/: installation.md  quickstart.md
docs/docs/introduction/: architecture.md  features.md  why-boson.md
docs/src/pages/: index.module.css  index.tsx
docs/static/: robots.txt  sitemap-reference.xml
examples/basic-api/: CMakeLists.txt  main.cpp
examples/basic-server/: CMakeLists.txt  main.cpp
examples/cookie-example/: CMakeLists.txt  main.cpp
examples/file-response-example/: CMakeLists.txt  main.cpp
examples/file-response-example/public/: index.html
examples/file-upload-example/: CMakeLists.txt  main.cpp
examples/file-upload-example/public/: index.html
examples/json-example/: CMakeLists.txt  main.cpp
examples/library-management-app/: CMakeLists.txt
examples/library-management-app/controllers/: book_controller.cpp  book_controller.hpp  user_controller.cpp  user_controller.hpp
examples/library-management-app/models/: book.cpp  book.hpp  loan.cpp  loan.hpp  user.cpp  user.hpp
examples/library-management-app/src/: main.cpp
examples/library-management-app/swagger/: index.html  openapi.yaml
examples/middleware-examples/: CMakeLists.txt  main.cpp
examples/static-files-example/: CMakeLists.txt  main.cpp
examples/static-files-example/public/: app.js  styles.css
include/boson/: boson.hpp  controller.hpp  cookie.hpp  error_handler.hpp  middleware.hpp  request.hpp  response.hpp  route_binder.hpp  router.hpp  server.hpp  static_files.hpp
include/boson/database/: database.hpp
src/: CMakeLists.txt  controller.cpp  error_handler.cpp  middleware.cpp  request.cpp  response.cpp  router.cpp  server.cpp
src/database/: database.cpp
swagger/: openapi.yaml
